Finished chapters 6 and 7

--- a/chapters.org
+++ b/chapters.org
@@ -4,8 +4,8 @@
 - [X] Chapter 3 Components in React
 - [X] Chapter 4 Styling in React
 - [X] Chapter 5 Creating Complex Components
-- [ ] Chapter 6 Transferring Properties
-- [ ] Chapter 7 Meet JSX... Again!
+- [X] Chapter 6 Transferring Properties
+- [X] Chapter 7 Meet JSX... Again!
 - [ ] Chapter 8 Dealing with State in React
 - [ ] Chapter 9 Going from Data to UI in React
 - [ ] Chapter 10 Events in React
