--- a/chapters.org
+++ b/chapters.org
@@ -9,8 +9,8 @@
 - [X] Chapter 8 Dealing with State in React
 - [X] Chapter 9 Going from Data to UI in React
 - [X] Chapter 10 Events in React
-- [ ] Chapter 11 The Component Lifecycle
-- [ ] Chapter 12 Accessing DOM Elements in React
+- [X] Chapter 11 The Component Lifecycle
+- [X] Chapter 12 Accessing DOM Elements in React
 - [X] Chapter 13 Setting Up Your React Dev Environment
 - [X] Chapter 14 Working with External Data in React
 - [ ] Chapter 15 Building an Awesome Todo List App in React
